--- a/读书笔记/《码出高效》.md
+++ b/读书笔记/《码出高效》.md
@@ -1,7 +1,5 @@
 [TOC]
 
-# 《码出高效》
-
 ## 一、计算机基础
 
 ### 1、TCP/IP
@@ -186,6 +184,9 @@
 
 ## 四、JVM
 
+- 如遇到图片不能完全加载，复制以下链接在浏览器打开即可
+- http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/cJHtE42QL*4Zbab8qfdLmG9P1m*5P0WJ76opPfpXNNM!/r/dDQBAAAAAAAA
+
 ![JVM类装载机制1](http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/cJHtE42QL*4Zbab8qfdLmG9P1m*5P0WJ76opPfpXNNM!/r/dDQBAAAAAAAA)
 
 ### 1、字节码
@@ -233,6 +234,9 @@
 
 
 ### 3、内存布局
+
+- 如遇到图片不能完全加载，复制以下链接在浏览器打开即可
+- http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/Fjgz1yRDRbP.Ms86Btbk.9Okk*gc1fS6ZOlxejSAh7Q!/r/dDYBAAAAAAAA
 
 ![Jvm内存结构12+](http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/Fjgz1yRDRbP.Ms86Btbk.9Okk*gc1fS6ZOlxejSAh7Q!/r/dDYBAAAAAAAA)
 
@@ -581,6 +585,8 @@ void transfer(Entry[] newTable, boolean rehash) {
     - 当槽上的元素个数减小到6，由红黑树转回链表
   - 使用了更加优化的方式统计集合内元素的数量
 - **在转化过程中使用同步块锁住当前槽的首元素，防止其他线程对当前槽进行增删改操作，转换完成后利用CAS替换原有链表**
+- 取消segments字段，直接采用`transient volatile HashEntry<K,V>[] table`保存数据，**将数组元素作为锁，对每一行数据进行加锁，可减少并发冲突的概率**
+- 数据结构由“数组＋单向链表”变为“数组＋单向链表＋红黑树”，对于hash表来说，最核心的能力在于将key hash之后能均匀的分布在数组中。如果hash之后散列的很均匀，那么table数组中的每个队列长度主要为0或者1。但实际情况并非总是如此理想，虽然ConcurrentHashMap类默认的加载因子为0.75，但是在数据量过大或者运气不佳的情况下，还是会存在一些**队列长度过长**的情况，如果还是采用单向列表方式，那么查询某个节点的**时间复杂度为O(n)**；因此，对于个数超过8(默认值)的列表，jdk1.8中采用了红黑树的结构，那么查询的时间复杂度可以**降低到O(logN)**，可以改进性能
 
 
 
