--- a/读书笔记/《开发艺术探索》.md
+++ b/读书笔记/《开发艺术探索》.md
@@ -1,5 +1,7 @@
 [TOC]
 
+
+
 ## 一、Activity生命周期和启动模式
 
 - 不能在 onPause 中做重量级的操作，因为必须 onPause 执行完成以后新启动的 Activity 才能 onResume。其实 onPause 和 onStop 都不能执行耗时的操作，尤其是 onPause，这也意味着，应当尽量在 onStop 中做操作，从而使得新 Activity 尽快显示出来并切换到前台。
@@ -9,9 +11,8 @@
 - 为 Activity 指定启动模式有两种方式：静态 XML 中指定 launchMode 和 Intent 中动态指定 FLAG。区别在于，其一，动态优先级高于静态；其二，静态方式无法直接为 Activity 设定 FLAG_ACTIVITY_CLEAR_TOP 标识，动态方式无法为 Activity 设定 singleInstance 模式。
 - 以 singleTask 启动时，onPause -> onNewIntent -> onResume
 - IntentFilter 中过滤的信息有 action、category、data。只有一个 Intent 同时匹配 action+category+data 才算完全匹配。另外，一个 Activity 中可以有多个 IntentFilter，只要能匹配其中任何一组 IntentFilter 即可成功启动对应的 Activity。
-- action 的匹配要求 Intent 中的 action 存在且必须和过滤规则中的其中一个 action 相同。
-- action 要求 Intent 中必须有一个 action 且必须能够和过滤规则中的某个 action 相同，而 category 要
-- Intent 可以没有 category，但是如果你一旦有 category，不管有几个，每个都要能够和过滤规则中的任何一个 category 相同。
+- **action 的匹配要求 Intent 中的 action 存在且必须和过滤规则中的其中一个 action 相同。action 要求 Intent 中必须有一个 action 且必须能够和过滤规则中的某个 action 相同，而 category 要**
+- **Intent 可以没有 category，但是如果你一旦有 category，不管有几个，每个都要能够和过滤规则中的任何一个 category 相同。**
 - 为了 Activity 能够接收隐式调用，就必须在 intent-filter 中指定 “android.intent.category.DEFAULT” 这个 category，原因是系统在调用 startActivity 或者 startActivityForResult 的时候会默认为 Intent 加上 “android.intent.category.DEFAULT” 这个 category。
 - 当通过隐式方式启动一个 Activity 的时候，可以做一下判断，看是否有 Activity 能够匹配我们的隐式 Intent，避免抛出找不到满足条件 Activity 的异常。判断方式有两种：采用 PackageManager 的 resolveActivity 方法或者 Intent 的 resolveActivity 方法，如果找不到就会返回 null。另外，PackageManager 还提供了 queryIntentActivities 方法，可以返回所有成功匹配的 Activities 信息而不是最佳匹配的。注意 MATCH_DEFAULT_ONLY 这个标志位，可以匹配那些在 intent-filter 中声明了 category.DEFAULT 的 Activity。使用这个标志位的意义在于，如果上述两个方法不返回 null，那么 startActivity 一定可以成功。
 
@@ -23,9 +24,18 @@
 
 - 反序列化得到的对象只是在内容上和序列化之前的对象相同，但它们本质上还是两个对象，所以它叫做”对象序列化”。
 
-- 系统提供了许多实现了 Parcelable 接口的类，它们都是可以直接序列化的，如 Intent、Bundle、Bitmap等，同时 List 和 Map 也可以序列化，前提是它们里面的每个元素都是可序列化的。
+- 系统提供了许多实现了 Parcelable 接口的类，它们都是可以直接序列化的，如 **Intent、Bundle、Bitmap等，同时 List 和 Map 也可以序列化，前提是它们里面的每个元素都是可序列化的。**
 
 - Binder 主要用在 Service 中，包括 AIDL 和 Messenger（Messenger 的底层是 AIDL）
+
+- Binder是什么：
+
+  - 只管来说Binder是一个类，它实现了Android中的IBinder接口
+  - 从IPC角度来说，BInder是Android中的一种跨进程通信方式
+  - BInder还可以理解为一种虚拟的物理设备，他的驱动是dev/binder，该进程间通信方式在Linux没有
+  - 从Android的FrameWork层来说，Binder是链接ServiceManager和各种Service的桥梁
+  - 从Android应用层来说，Binder是客户端和服务端进行通信的媒介，当bindService的时候，服务端会返回一个包含了服务端业务调用的Binder对象，通过这个Binder对象，客户端就可以获取服务端提供的服务或者数据，这里的服务包括普通服务和基于AIDL的服务
+  - Android开发中BInder主要用在Service当中，包括AIDL和Messenger，其中普通的Binder不涉及进程间通信，无法触及Binder的核心，而Messenger的底层其实是AIDL
 
 - Bundle 实现了 Parcelable 接口，所以它可以很方便的在不同的进程间传输。当然，我们传输的数据必须能够被序列化，比如基本类型、实现了 Parcelable 接口的对象、实现了 Serialization 接口的对象以及一些 Android 支持的特殊对象。
 
@@ -37,11 +47,11 @@
 
 - 当有大量的并发请求或跨进程调用服务端的方法时，要使用 AIDL 而不是 Messenger（Messenger 底层也是 AIDL）。
 
-- AIDL 支持的数据类型：基本数据类型、String 和 CharSequence、List（只支持 ArrayList，里面每个元素都必须能够被 AIDL 支持）、Map（只支持 HashMap，里面的每个元素都必须能够被 AIDL 支持，包括 key 和 value）、所有实现了 Parcelable 接口的对象、AIDL 接口本身。其中，自定义的 Parcelable 对象和 AIDL 对象必须要显示 import 进来。
+- AIDL 支持的数据类型：基本数据类型、String 和 CharSequence、List（只支持 ArrayList，里面每个元素都必须能够被 AIDL 支持）、Map（只支持 HashMap，里面的每个元素都必须能够被 AIDL 支持，包括 key 和 value）、所有实现了 Parcelable 接口的对象、AIDL 接口本身。**其中，自定义的 Parcelable 对象和 AIDL 对象必须要显示 import 进来**。
 
 - AIDL 中除了基本类型，其它类型的参数必须标上方向：in、out、inout。
 
-- AIDL 接口中只支持方法，不支持声明静态常量，这一点区别于传统的接口。 AIDL 中无法使用普通接口，如果使用接口只能是 AIDL 接口。
+- AIDL 接口中只支持方法，**不支持声明静态常量，这一点区别于传统的接口**。 AIDL 中无法使用普通接口，如果使用接口只能是 AIDL 接口。
 
 - CopyOnWriteArrayList（不是继承自 ArrayList） 和 ConcurrentHashMap 支持并发读/写。
 
@@ -56,6 +66,12 @@
 - IPC 方式的优缺点和适用场景
 
   ![ipc](http://s191.photo.store.qq.com/psb?/V14L47VC0w3vOf/gtVOqTqUKjCVcvDD1x7zygBw.4nGVL1I5lqd6t6sz*U!/b/dL8AAAAAAAAA)
+
+  ----
+
+  
+
+  ![binder工作流程](http://s191.photo.store.qq.com/psb?/V14L47VC0w3vOf/ZUdc9b8LQVmz5JWp5b6StkyrJFlr32X3kfbzVP3j9co!/b/dL8AAAAAAAAA)
 
 ## 三、View的事件体系
 
@@ -169,7 +185,7 @@ return consume;
 
 - 视图大小的控制是由父视图、布局文件、以及视图本身共同完成的，父视图会提供给子视图参考的大小，而开发人员可以在XML文件中指定视图的大小，然后视图本身会对最终的大小进行拍板。
 
-- Layout 的作用是 ViewGroup 用来确定子元素的位置，当 ViewGroup 的位置被确定后，它在 onLayout 中会遍历所有的子元素并调用其 layout 方法，在 layout 方法中 onLayout 方法又会被调用。Layout 方法确定 View 本身的位置，而 onLayout 方法则会确定所有子元素的位置。
+- Layout 的作用是 ViewGroup 用来确定子元素的位置，当 ViewGroup 的位置被确定后，它在 onLayout 中会遍历所有的子元素并调用其 layout 方法，在 layout 方法中 onLayout 方法又会被调用。**Layout 方法确定 View 本身的位置，而 onLayout 方法则会确定所有子元素的位置。**
 
 - View 中的 onLayout() 方法就是一个空方法，因为 onLayout() 过程是为了确定视图在布局中所在的位置，而这个操作应该是由布局来完成的，即父视图决定子视图的显示位置。而 ViewGroup 中 的onLayout() 方法是一个抽象方法，这就意味着所有 ViewGroup 的子类都必须重写这个方法。没错，像 LinearLayout、RelativeLayout 等布局，都是重写了这个方法，然后在内部按照各自的规则对子视图进行布局的。
 
@@ -228,6 +244,20 @@ throw new CalledFromWrongThreadException(“Only the original thread that create
 
 ## 十一、Android中的线程和线程池
 
+Android提供了四种(5、6种另算)常用的操作多线程的方式，分别是：
+
+```java
+1. Handler+Thread 
+2. AsyncTask           //Handler和线程池
+3. ThreadPoolExecutor 
+4. IntentService       //内部采用HandlerThread
+5. HandlerThread       //具有消息循环的线程
+6. Activity.runOnUiThread(Runnable)   
+7. View.post(Runnable) ;View.postDelay(Runnable , long)
+```
+
+![ss](http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/TmrHFNgt.hopJjRlhXEi5hknqEw.ivnnc7xU4WpnUCg!/r/dEkBAAAAAAAA)
+
 - Activity 的主线程就是 ActivityThread。ActivityThread 通过 ApplicationThread 和 AMS 进行进程间通信，AMS 以进程间通信的方式完成 ActivityThread 的请求后回调 ApplicationThread 中的 Binder 方法，然后 ApplicationThread 会向 H 发送消息，H 收到消息后会将 ApplicationThread 中的逻辑切换到 ActivityThread 中去执行，即切换到主线程中去执行，这个过程就是主线程的消息循环模型。（H 是主线程中的 Handler）
 - 对于 AsyncTask 来说，它的底层使用了线程池，对于 IntentService 和 HandlerThread 来说，它的底层则直接使用了线程。
 - AsyncTask 封装了 Thread 和 Handler，但是 AsyncTask 并不适合进行特别耗时的后台任务，对于特别耗时的任务来说，建议采用线程池。
@@ -241,7 +271,7 @@ throw new CalledFromWrongThreadException(“Only the original thread that create
 - AsyncTask 中的 InternalHandler 用于将执行环境从线程池切换到主线程
 - IntentService 的优点：子线程中执行，可以自动结束，不容易被系统杀死(普通线程脱离四大组件后优先级非常低)
 - HandlerThread 继承自 Thread，是一种可以使用 Handler 的 Thread，内部创建了消息队列。外界需要通过 Handler 的消息方式来通知 HandlerThread 执行一个具体的任务。具体使用场景是 IntentService。由于 HandlerThread 的 run 方法是一个无限循环，因此当明确不需要再使用 HandlerThread 时，可以通过它的 quit 或 quitSafely 方法来终止线程的执行。
-- IntentService 第一次被启动时，onCreate 方法会被调用，其中会创建一个 HandlerThread，然后使用它的 Looper 来构造一个 Handler 对象 mServiceHandler，这样通过 mServiceHandler 发送的消息最终都会在 HandlerThread 中执行。
+- **IntentService 第一次被启动时，onCreate 方法会被调用，其中会创建一个 HandlerThread，然后使用它的 Looper 来构造一个 Handler 对象 mServiceHandler，这样通过 mServiceHandler 发送的消息最终都会在 HandlerThread 中执行。**
 - 另外，由于每执行一个后台任务就必须启动一次 IntentService，而 IntentService 内部则通过消息的方式向 HandlerThread 请求执行任务，Handler 中的 Looper 是顺序处理消息的，这就意味着 IntentService 也是顺序执行后台任务的，当有多个后台任务同时存在时，这些后台任务会按照外界发起的顺序排队执行。
 - ThreadPoolExecutor 是线程池的真正实现，下面是其一个比较常用的构造方法：
 
@@ -255,11 +285,11 @@ throw new CalledFromWrongThreadException(“Only the original thread that create
       ThreadFactory threadFactory ) // 为线程池提供创建新线程的机会，ThreadFactory 是一个接口，只有一个方法：Thread newThread(Runnable r)
 ```
 
-- ThreadPoolExecutor 执行任务时的规则： 
-  （1）如果线程池中的线程数量未达到核心线程数量，那么会直接启动一个核心线程来执行任务 
-  （2）如果线程池中的线程数量已经达到或者超过核心线程的数量，那么任务会被插入到 workQueue 中排队等待执行 
-  （3）如果在步骤2中无法将任务插入到任务队列中，这往往是由于任务队列已满，这个时候如果线程数量未达到线程池规定的最大值，那么会立刻启动一个非核心线程来执行任务 
-  （4）如果步骤3中线程数量已经达到线程池规定的最大值，那么就拒绝执行此任务，ThreadPoolExecutor 会调用 RejectedExecutionHandler 的 rejectExecution 方法来通知调用者
+- **ThreadPoolExecutor 执行任务时的规则：** 
+  **（1）如果线程池中的线程数量未达到核心线程数量，那么会直接启动一个核心线程来执行任务** 
+  **（2）如果线程池中的线程数量已经达到或者超过核心线程的数量，那么任务会被插入到 workQueue 中排队等待执行** 
+  **（3）如果在步骤2中无法将任务插入到任务队列中，这往往是由于任务队列已满，这个时候如果线程数量未达到线程池规定的最大值，那么会立刻启动一个非核心线程来执行任务** 
+  **（4）如果步骤3中线程数量已经达到线程池规定的最大值，那么就拒绝执行此任务，ThreadPoolExecutor 会调用 RejectedExecutionHandler 的 rejectExecution 方法来通知调用者**
 
   四种线程池： 
   （1）newFixedThreadPool 只有核心线程并且这些核心线程没有超时限制，另外任务队列也是没有大小限制的。 
@@ -291,7 +321,7 @@ throw new CalledFromWrongThreadException(“Only the original thread that create
   （2）Activity 生命周期管理：使用反射，但是效率低且编写麻烦；最好使用接口回调，将 Activity 的生命周期方法都写到 IDLPlugin 接口中，在代理 Activity 中只需要在相应生命周期方法中调用插件 Activity 的生命周期方法即可 
   （3）插件 ClassLoader 的管理：需要合理管理各个插件的 DexClassLoader，这样同一个插件就可以采用同一个 ClassLoader 去加载类，从而避免了多个 ClassLoader 加载同一个类时所引发的类型转换错误，可以将不同插件的 ClassLoader 存储在一个 HashMap 中，这样就可以保证不同插件中的类彼此互不干扰
 
-- 当一个进程发生 ANR 了以后，系统会在 /data/anr 目录下创建一个文件 traces.txt，通过分析这个文件就能定位出 ANR 的原因。 adb pull /data/anr/traces.txt。
+- 当一个进程发生 ANR 了以后，**系统会在 /data/anr** 目录下创建一个文件 traces.txt，通过分析这个文件就能定位出 ANR 的原因。 adb pull /data/anr/traces.txt。
 
 - float x 与“零值”比较的if语句为 if (fabs(x) < 0.00001f)
 
