--- a/读书笔记/《码出高效》.md
+++ b/读书笔记/《码出高效》.md
@@ -5,7 +5,7 @@
 ### 1、TCP/IP
 
 - TCP（传输控制协议）是一种面向连接的通过失败重传机制确保数据在端到端之间可靠传输的协议。
-- IP是面向无连接武装带的么有额外的控制机制保证发送的包是否有序到达。
+- IP是面向无连接的没有额外的控制机制保证发送的包是否有序到达。
 
 - 五层模型：应用层、传输层、网络层、链路层、物理层
 - 总结一下：程序在发送消息时，应用层按既定的协议打包数据，随后由数据层加上双方端口号，网络层加上双方IP地址，链路层加上双方MAC地址，并且将数据拆分成数据帧，经过多个路由器和网关后到达目的机器。简而言之，就是按“端口--IP地址--MAC地址”这样的路径进行数据的封装和发送。
