--- a/Kotlin/Kotlin特性/作用域函数.md
+++ b/Kotlin/Kotlin特性/作用域函数.md
@@ -255,7 +255,7 @@ fun createIntent(intentData: String, intentAction: String) =
 					it:    T.let()
 			否：
 				参数是否为this?
-					是:  run()
-					否:  with(T)
+					是:  with(T)
+					否:  run()
 ```
 
