--- a/读书笔记/《源码设计模式》.md
+++ b/读书笔记/《源码设计模式》.md
@@ -224,6 +224,8 @@
 
 ### 23.桥接模式：Window与WindowManager之间的关系
 
+> 桥接的事Window和WindowManager
+>
 > 将抽象部分与实现部分分离，或者一个类需要从多个维度扩展但是又不希望使用继承和实现。
 >
 > 根据维度进行拆分
@@ -260,3 +262,33 @@
 #### 4、MVVM相比于MVP的**优势**：
 
 在常规的开发模式中，数据变化需要更新UI的时候，需要先获取UI控件的引用，然后再更新UI，获取用户的输入和操作也需要通过UI控件的引用，但在MVVM中，这些都是通过**数据驱动**来自动完成的，数据变化后会自动更新UI，UI的改变也能自动反馈到数据层，数据成为主导因素。这样MVVM层在业务逻辑处理中只要关心数据，不需要直接和UI打交道，在业务处理过程中简单方便很多。
+
+
+
+
+
+
+
+### 总结
+
+- 创建型：
+  - 单例：懒汉、饿汉、线程安全、线程不安全、DCL双重检查锁、静态内部类、枚举
+  - 建造者：Builder是Dialog的静态内部类，Builder里面有一个AlertParams实例用来保存我们设置的属性
+- 行为型：
+  - 责任链：事件分发
+  - 观察者：当ListView更新数据之后会调用Adapter的notifyDataSetChanged()BaseAdapter中维持着一个数据观察者DataSetObservable。在这个方法中会调用notifyChanged()。而这里面就是遍历所有的观察者，进行onChanged()的调用。此时DataObservable就是被观察者。而观察者AdapterDataSetObserver在ListView的setAdapter()中创建，其是AdapterView的内部类，其中的onChanged()代码中是调用ListView的requestLayout()对界面进行更新。
+- 结构型：
+  - 适配器模式：
+  - 代理模式：为其他对象提供一种代理以**控制对这个对象的访问**
+  - 外观模式：动态的给一个对象添加一些**额外的职责**，就**增加功能**来说，装饰模式相比生成子类更佳灵活
+  - 桥接模式：将抽象和实现解耦，使二者可以独立的变化，主要是应对某个类族有多个变化维度导致子类类型急剧增多的场景，通过桥接可以使多个变化的维度隔离开，使他们可以独立的变化，最后通过组合使他们应对多维的变化，减少子类的数量和复杂度
+
+
+
+- 简单工厂模式：一个工厂创建**不同类型**的对象
+- 工厂方法模式：一个**具体**的工厂类负责创建一个**具体**对象类型
+- 抽象工厂模式：一个具体的工厂负责创建**一系列相关**的对象
+- Builder模式：对象构建与表示分离，它更注重对象的**创建过程**
+
+
+
