--- a/读书笔记/《码出高效》.md
+++ b/读书笔记/《码出高效》.md
@@ -5,14 +5,41 @@
 ### 1、TCP/IP
 
 - TCP（传输控制协议）是一种面向连接的通过失败重传机制确保数据在端到端之间可靠传输的协议。
+
 - IP是面向无连接的没有额外的控制机制保证发送的包是否有序到达。
 
 - 五层模型：应用层、传输层、网络层、链路层、物理层
+
 - 总结一下：程序在发送消息时，应用层按既定的协议打包数据，随后由数据层加上双方端口号，网络层加上双方IP地址，链路层加上双方MAC地址，并且将数据拆分成数据帧，经过多个路由器和网关后到达目的机器。简而言之，就是按“端口--IP地址--MAC地址”这样的路径进行数据的封装和发送。
   - 三次握手：SYN和ACK置0和1，seq 和 ack [序号和应答号]    x和y
   - 你听得见吗？
   - 我听得见，你听得见吗？
   - 我也听得见，我们说话吧。
+
+- 通过三次握手，A和B都能确认自己和对方的收发信能力，相当于建立了互相的信任，就可以开始通信了。
+
+  下面，我们介绍一下三次握手具体发送的内容，用一张图描述如下：
+
+  
+
+  ![img](http://s191.photo.store.qq.com/psb?/V14L47VC0w3vOf/EK0CYGY18Zs1mQ3LUCmJFeDinln7*O8Jb0rs9N6AJys!/b/dL8AAAAAAAAA)
+
+  
+
+  首先，介绍一下几个概念：
+
+  - ACK：响应标识，1表示响应，连接建立成功之后，所有报文段ACK的值都为1
+  - SYN：连接标识，1表示建立连接，连接请求和连接接受报文段SYN=1，其他情况都是0
+  - FIN：关闭连接标识，1标识关闭连接，关闭请求和关闭接受报文段FIN=1，其他情况都是0，跟SYN类似
+  - seq number：序号，一个随机数X，请求报文段中会有该字段，响应报文段没有
+  - ack number：应答号，值为请求seq+1，即X+1，除了连接请求和连接接受响应报文段没有该字段，其他的报文段都有该字段
+
+  知道了上面几个概念后，看一下三次握手的具体流程：
+
+  1. 第一次握手：建立连接请求。客户端发送连接请求报文段，将SYN置为1，seq为随机数x。然后，客户端进入SYN_SEND状态，等待服务器确认。
+  2. 第二次握手：确认连接请求。服务器收到客户端的SYN报文段，需要对该请求进行确认，设置ack=x+1（即客户端seq+1）。同时自己也要发送SYN请求信息，即SYN置为1，seq=y。服务器将SYN和ACK信息放在一个报文段中，一并发送给客户端，服务器进入SYN_RECV状态。
+  3. 第三次握手：客户端收到SYN+ACK报文段，将ack设置为y+1，向服务器发送ACK报文段，这个报文段发送完毕，客户端和服务券进入ESTABLISHED状态，完成Tcp三次握手。
+
 - 四次握手：
   - 我们分手吧
   - 好等我收拾东西，收拾完我告诉你
@@ -696,7 +723,7 @@ void transfer(Entry[] newTable, boolean rehash) {
   - 无同步方案
     - 可重入代码
     - 线程本地存储
-      - 每一个线程的Thread对象都有一个ThreadLocalMap对象，这个对象存储了一组以ThreadLocal.threadLocalHashMap为键，以本地线程变量为值的k-V值对，ThreadLocal对象是当前线程ThreadLocalMap的访问入口，每个ThreadLocal对象包含了一个独一无二的threadLocalHashCode值，使用这个值就可以在线程的K_V值对中找回对应的本地线程变量
+      - 每一个线程的Thread对象都有一个ThreadLocalMap对象，这个对象存储了一组以ThreadLocal.threadLocalHashCode为键，以本地线程变量为值的k-V值对，ThreadLocal对象是当前线程ThreadLocalMap的访问入口，每个ThreadLocal对象包含了一个独一无二的threadLocalHashCode值，使用这个值就可以在线程的K_V值对中找回对应的本地线程变量
 
 ### 4、线程池
 
