--- a/Tips/【1】数据结构与算法面试题.md
+++ b/Tips/【1】数据结构与算法面试题.md
@@ -131,10 +131,8 @@
 //优化1：连片有序整体无序
 void BubbleSort(int arr[], int len)
 {
-    int i = 0;
-    int tmp = 0;
     int flag = 0;
-    for (i = 0; i < len - 1; i++)//确定排序趟数
+    for (int i = 0; i < len - 1; i++)//确定排序趟数
     {
         flag=0; //置为0*********************************
         for (int j = 0; j < len - 1 - i; j++)//确定比较次数
@@ -142,7 +140,7 @@ void BubbleSort(int arr[], int len)
                 if (arr[j]>arr[j + 1])
             {
                 //交换
-                tmp = arr[j];
+                int tmp = arr[j];
                 arr[j] = arr[j + 1];
                 arr[j + 1] = tmp;
                 flag = 1;//加入标记*********************************
@@ -184,53 +182,6 @@ void BubbleSort(int arr[], int len)
             break;
         }
         k = pos;//下一次比较到记录位置即可 +++++++++++++++++++++++++++++++++
-    }
-}
-
-//优化3：一次排序确定两个值
-void BubbleSort(int arr[], int len)
-{
-    int i = 0;
-    int j = 0;
-    int n = 0;//同时找最大值的最小需要两个下标遍历
-    int flag = 0;
-    int pos = 0;//用来记录最后一次交换的位置
-    int k = len - 1;
-    for (i = 0; i < len - 1; i++)//确定排序趟数
-    {
-        pos = 0;
-        flag = 0;
-        //正向寻找最大值
-        for (j = n; j < k; j++)//确定比较次数
-        {
-            if (arr[j]>arr[j + 1])
-            {
-                //交换
-                int tmp = arr[j];
-                arr[j] = arr[j + 1];
-                arr[j + 1] = tmp;
-                flag = 1;//加入标记
-                pos = j;//交换元素，记录最后一次交换的位置
-            }
-        }
-        if (flag == 0)//如果没有交换过元素，则已经有序,直接结束
-        {
-            break;
-        }
-        k = pos;//下一次比较到记录位置即可
-        //反向寻找最小值
-        for (j = k; j > n; j--)
-        {
-            int tmp = arr[j];
-            arr[j] = arr[j - 1];
-            arr[j - 1] = tmp;
-            flag = 1;
-        }
-        n++;
-        if (flag == 0)//如果没有交换过元素，则已经有序,直接结束
-        {
-            return;
-        }
     }
 }
 ```
@@ -372,6 +323,7 @@ public static void main(String[] args) {
                 try {
                     int threadId = Integer.parseInt(Thread.currentThread().getName());
                     while (i < 26) {
+                        //关键代码
                          if (i % 3 == threadId - 1) {
                              System.out.println(threadId +""+ (char) c++);
                              i++;
@@ -487,6 +439,110 @@ class Producer extends Thread {
             } catch (InterruptedException e) {
                 e.printStackTrace();
             }
+        }
+    }
+}
+```
+
+
+
+### 【3】5个线程先打印Hello再打印World
+
+> countDownLatch.countDown();计数器加1
+>
+>  countDownLatch.await();等待
+
+```java
+public class FiveThreadCommunication {
+
+    private static final int MAX_THREAD = 5;
+
+    private static final class PrintRunnable implements Runnable {
+
+        private final CountDownLatch countDownLatch;
+
+        public PrintRunnable(CountDownLatch countDownLatch) {
+            this.countDownLatch = countDownLatch;
+        }
+
+        @Override
+        public void run() {
+            System.out.println("Thread-" + Thread.currentThread().getId() + " Hello");
+            countDownLatch.countDown();
+            try {
+                countDownLatch.await();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("Thread-" + Thread.currentThread().getId() + " World");
+        }
+
+    }
+
+
+    public static void main(String args[]) throws InterruptedException {
+        CountDownLatch countDownLatch = new CountDownLatch(MAX_THREAD);
+        for (int i = 0; i < MAX_THREAD; i++) {
+            new Thread(new PrintRunnable(countDownLatch)).start();
+        }
+    }
+
+
+}
+```
+
+
+
+### 【4】写一个简单的死锁
+
+> 两个线程争资源
+
+```java
+public class DeadLock {
+    public static String obj1 = "obj1";
+    public static String obj2 = "obj2";
+    public static void main(String[] args){
+        Thread a = new Thread(new Lock1());
+        Thread b = new Thread(new Lock2());
+        a.start();
+        b.start();
+    }    
+}
+class Lock1 implements Runnable{
+    @Override
+    public void run(){
+        try{
+            System.out.println("Lock1 running");
+            while(true){
+                synchronized(DeadLock.obj1){
+                    System.out.println("Lock1 lock obj1");
+                    Thread.sleep(3000);//获取obj1后先等一会儿，让Lock2有足够的时间锁住obj2
+                    synchronized(DeadLock.obj2){
+                        System.out.println("Lock1 lock obj2");
+                    }
+                }
+            }
+        }catch(Exception e){
+            e.printStackTrace();
+        }
+    }
+}
+class Lock2 implements Runnable{
+    @Override
+    public void run(){
+        try{
+            System.out.println("Lock2 running");
+            while(true){
+                synchronized(DeadLock.obj2){
+                    System.out.println("Lock2 lock obj2");
+                    Thread.sleep(3000);
+                    synchronized(DeadLock.obj1){
+                        System.out.println("Lock2 lock obj1");
+                    }
+                }
+            }
+        }catch(Exception e){
+            e.printStackTrace();
         }
     }
 }
@@ -835,7 +891,43 @@ public class Solution {
 
 
 
-##### 【2】剪绳子
+##### 【2】变态跳台阶
+
+> 就是每次不只是可以跳1或者2节台阶，可以跳n节
+>
+> 假设跳上第n个台阶有f(n)种方法，则f(1)=1,f(2)=2,f(3)=4,f(4)=8,我们隐约感觉到f(n)=2^(n-1)。但是需要证明下，同样根据我们根据上篇文章中跳台阶的思路，可以得到**f(n)=f(n-1)+f(n-2)+....+f(1)+1,而f(n-1)=f(n-2)+....+f(1)+1**,两个式子相减，得到f(n) = 2f(n-1),很明显可以得到**f(n)=2^(n-1)**
+
+```java
+//循环
+public static  int JumpFloorII(int target) {
+     	if (target==0){
+            return 0;
+        }
+    
+        int result=1;
+        for (int i=0;i<target-1;i++){
+            result=result*2;
+        }
+    	//其实就是下面一行代码
+   		//result= (int) Math.pow(2,target-1);
+        return result;
+    }
+//递归
+//f(n) = 2*f(n-1)*/
+    public int JumpFloorII(int target) {
+        if(target<=0){
+            return 0;
+        }else if(target==1){
+            return 1;
+        }else{
+            return 2*JumpFloorII(target-1);
+        }
+    }
+```
+
+
+
+##### 【3】剪绳子
 
 > - **题目：**
 >   - 给你一根长度为n的绳子，请把绳子剪成m段（m , n ）都是正整数，（n>1&m>1）
@@ -874,7 +966,7 @@ public static int getMaxResult(int length) {
         res[3] = 3 ;
         //此处是关键，
     	//res[4] = 4; -》[1，3] [2，2]
-    	//res[5] = 6; -》[1，4] [2，4]
+    	//res[5] = 6; -》[1，4] [2，3]
         for(int i = 4 ; i <= length ; i ++) {
             max = 0 ;
             //这个循环就是两端相乘，往中间缩进
@@ -964,7 +1056,7 @@ public class QuickSort {
 
 ```java
 public class Solution {
-    //左下角开始找
+    //右上角开始找
     private boolean findInArrayFromRightTop(int[][] arr, int rows, int columns, int number) {
 
         if (arr != null && rows > 0 && columns > 0) {
@@ -984,7 +1076,7 @@ public class Solution {
         return false;
     }
     
-	//右上角开始找
+	//左下角开始找
     private boolean findInArrayFromLeftBottom(int[][] arr, int rows, int columns, int number) {
 
         if (arr != null && rows > 0 && columns > 0) {
@@ -1028,7 +1120,9 @@ public class Main {
 
         int result = numbers[0];
         int times = 1;
+        //首先找出出现最多的数字，然后再检验是否超过半数
         for (int i = 1; i < numbers.length; i++) {
+            //注意次数减为0的情况
             if (times == 0) {
                 result = numbers[i];
                 times = 1;
@@ -1092,7 +1186,9 @@ class Solution {
             return;
         }
 
+        //start可以理解为对角线偏移量
         int start = 0;
+        //注意while循环的控制条件
         while (columns > 2 * start && rows > 2 * start) {
             printCircle(matrix, columns, rows, start);
             start++;
@@ -1100,6 +1196,8 @@ class Solution {
         }
     }
 
+    //for + 3if模型
+    //if里的判断条件在极端的时候适用，比如横线，竖线，两行横线这种情况
     private static void printCircle(int[][] matrix, int columns, int rows, int start) {
         //结束标志
         int endX = columns - 1 - start;
@@ -1170,8 +1268,10 @@ public int removeDuplicates(int[] nums) {
     int i = 0;
     //开始条件 i=0；j=1；
     for (int j = 1; j < nums.length; j++) {
+        //之前一直都是相等的，突然遇到个不是相等的
         //如果二者不等，说明需要前移数字了
         if (nums[j] != nums[i]) {
+            //注意先i++，再移动数字
             i++;
             nums[i] = nums[j];
         }
@@ -1220,7 +1320,7 @@ public class Solution {
             //遇到最小值那么就替换最小值
             if (prices[i] < minprice)
                 minprice = prices[i];
-            //计算利润
+            //如果是更低峰谷则替换峰谷，否则计算利润
             else if (prices[i] - minprice > maxprofit)
                 maxprofit = prices[i] - minprice;
         }
@@ -1291,6 +1391,74 @@ class Solution {
         return maxprofit;
     }
 }
+```
+
+
+
+#### 【9】排序数组数字出现的次数
+
+> 记住两个关键的判断条件
+>
+> - //判断是不是第一个K，前一个不等于K，就是第一个K
+>   if (middleIndex > 0 && array[middleIndex - 1] != k || middleIndex == 0) {
+> - //判断是不是最后一个K，后一个不等于K，就是最后一个K
+>   if (middleIndex < array.length - 1 && array[middleIndex + 1] != k || middleIndex == array.length - 1)
+
+```java
+public int GetNumberOfK(int [] array , int k) {
+      int num = 0;
+        if (array != null && array.length > 0) {
+            int firstKIndex = getFirstK(array, k, 0, array.length - 1);
+            int lastKIndex = getLastK(array, k, 0, array.length - 1);
+            if (firstKIndex > -1 && lastKIndex > -1)
+                num = lastKIndex - firstKIndex + 1;
+        }
+        return num;
+    }
+
+    /*
+    * 找到第一个出现的数字的下标
+    */
+    public  int getFirstK(int[] array, int k, int start, int end) {
+        if (start > end)
+            return -1;
+        int middleIndex = start + (end - start) / 2;
+        int middleData = array[middleIndex];
+        //先判断中间的值是否等于k
+        if (middleData == k) {
+        //判断是不是第一个K，前一个不等于K，就是第一个K
+            if (middleIndex > 0 && array[middleIndex - 1] != k || middleIndex == 0) {
+                return middleIndex;
+            } else
+                end = middleIndex - 1;
+        } else if (middleData > k) {
+            end = middleIndex - 1;
+        } else
+            start = middleIndex + 1;
+        return getFirstK(array, k, start, end);
+    }
+
+     /*
+    * 找到最后一个出现的数字的下标
+    */
+    public  int getLastK(int array[], int k, int start, int end) {
+        if (start > end) {
+            return -1;
+        }
+        int middleIndex = (start + end) / 2;
+        int middleData = array[middleIndex];
+        if (middleData == k) {
+         //判断是不是最后一个K，后一个不等于K，就是最后一个K
+            if (middleIndex < array.length - 1 && array[middleIndex + 1] != k || middleIndex == array.length - 1)
+                return middleIndex;
+            else
+                start = middleIndex + 1;
+        } else if (middleData < k) {
+            start = middleIndex + 1;
+        } else
+            end = middleIndex - 1;
+       return getLastK(array, k, start, end);
+    }
 ```
 
 
@@ -1384,6 +1552,8 @@ public class Main {
             return null;
         }
 
+        //注意是LinkedhashMap，要么遍历检验的时候遍历array不要遍历keySet
+        //LinkedHashMap是根据插入顺序来保证有序的
         LinkedHashMap<Character, Integer> map = new LinkedHashMap<>();
         char[] array = template.toCharArray();
         for (char key : array) {
@@ -1409,7 +1579,7 @@ public class Main {
 
 ```java
 //题目1------一个一次[2次中挑]
-//思路：一直亦或
+//思路：一直亦或[1^1=0 0^0=0 1^0=1 0^1=1 两者相等为0,不等为1]
 给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
 你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
 class Solution {
@@ -1440,6 +1610,7 @@ class Solution {
                     bitnums++;
             }
             if(bitnums % 3 != 0)
+            	//改变result的位
                 ret |= bit;
         }
         return ret;
@@ -1541,8 +1712,8 @@ public class Main {
         } else {
             ListNode tempNode = head;
             while (tempNode != null) {
-                stack.push(tempNode.getValue());
-                tempNode = tempNode.getNext();
+                stack.push(tempNode.val);
+                tempNode = tempNode.next;
             }
             while (!stack.empty()) {
                 System.out.print(stack.pop() + " -> ");
@@ -1556,10 +1727,8 @@ private void showListFromTailToHead(ListNode head) {
         if (head == null) {
             System.out.println("链表为空");
         } else {
-            if (head.getNext()!=null){
-                showListFromTailToHead(head.next());
-            }
-            System.out.print(head.getValue()+" - > ");
+            showListFromTailToHead(head.next);
+            System.out.print(head.val + " - > ");
         }
     }
 ```
@@ -1610,7 +1779,8 @@ class Solution {
         LinkNode slow = head.next;
         //找到相遇点，将快节点置为头，再次相遇即为头
         while (fast != slow) {
-            if (fast.next.next != null && slow.next != null) {
+            //记住if条件
+            if (fast.next!=null && fast.next.next != null ) {
                 fast = fast.next.next;
                 slow = slow.next;
             } else {
@@ -1721,61 +1891,51 @@ public class Solution {
 #### 【5】删除排序链表重复节点
 
 > - 题目：在一个排好序的链表中存在重复的结点，请删除该链表中重复的结点，重复的结点不保留，并返回链表头指针。 例如，链表1->2->3->3->4->4->5 处理后为 1->2->5。
-> - 思路：从头节点开始如果下个节点与当前节点重复，则找到第一个与当前不同的节点开始递归，反之，保留当前结点并从下一个结点开始递归
+> - 思路：
 
 ```java
 public class Solution {
-    public ListNode deleteDuplication(ListNode pHead)
-    {
-        if (pHead == null || pHead.next == null) { 
-            return pHead;//停止递归条件
-        }
-        if (pHead.val == pHead.next.val) {
-            //如果下个节点与当前节点重复，则找到第一个与当前不同的节点开始递归
-            ListNode pNode = pHead.next;
-            while (pNode != null && pNode.val == pHead.val) {
-                pNode = pNode.next;
-            }
-            return deleteDuplication(pNode); 
-        } else { 
-            //反之，保留当前结点，并从下一个结点开始递归
-            pHead.next = deleteDuplication(pHead.next); 
-            return pHead;
+    public ListNode deleteDuplicates(ListNode head) {
+    ListNode current = head;
+    while (current != null && current.next != null) {
+        if (current.next.val == current.val) {
+            //如果值相等就指向下下个
+            current.next = current.next.next;
+        } else {
+            //否则current往后移动
+            current = current.next;
         }
     }
+    return head;
+	}
 }
 ```
 
 
 
-#### 【6】倒数第k个节点
+#### 【6】倒数第k个节点[找到与删除]
 
 > - 题目：输入一个链表，输出该链表中倒数第k个结点
 > - 思路：用p1、p2指向链表头部，先让p1走(k-1)步到达第k个节点，此时p1和p2相隔k个节点；然后p1、p2同时往后移动，当p1到达链尾时，p2所在位置正是倒数第k个节点
 
 ```java
-public class Solution {
-    public ListNode FindKthToTail(ListNode head,int k) {
-        if(head==null||k<=0){
-            return null;
-        }
-        ListNode p1=head;
-        ListNode p2=head;       
-        //p1先到达第k个节点处
-        for(int i=1;i<k;i++){
-            if(p1.next!=null){
-                p1=p1.next;
-            }else{
-                return null;
-            }
-        }
-        //p1走到链尾时p2正为倒数第k个节点
-        while(p1.next!=null){
-            p1=p1.next;
-            p2=p2.next;
-        }
-        return last;
+public ListNode removeNthFromEnd(ListNode head, int n) {
+    //防止个数为1的时候的空指针异常
+    ListNode dummy = new ListNode(0);
+    dummy.next = head;
+    ListNode first = dummy;
+    ListNode second = dummy;
+    // 注意i< = n+1
+    for (int i = 1; i <= n + 1; i++) {
+        first = first.next;
     }
+    // 注意是first！=null
+    while (first != null) {
+        first = first.next;
+        second = second.next;
+    }
+    second.next = second.next.next;
+    return dummy.next;
 }
 ```
 
@@ -1998,6 +2158,24 @@ class Solution {
 
 
 
+#### 【12】链表的中间节点
+
+```java
+class Solution {
+    public ListNode middleNode(ListNode head) {
+        ListNode slow = head, fast = head;
+        //注意循环条件
+        while (fast != null && fast.next != null) {
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        return slow;
+    }
+}
+```
+
+
+
 ### 5、树
 
 > - 递归结束条件
@@ -2091,7 +2269,7 @@ class Solution {
 
 #### 【3】非递归遍历二叉树
 
-> 关键是条件判断
+> 关键是条件判断 while while if 模型
 >
 > -  while (current != null || !stack.empty()) {
 >   -  while (current != null) {
@@ -2143,6 +2321,7 @@ class Solution {
 
     /**
      * 后序非递归
+     * 
      */
     public void postOrderTraverseByStack(Node head) {
         Stack<Node> stack = new Stack<>();
@@ -2334,6 +2513,26 @@ class Solution {
         return judge(left.leftChild, right.rightChild) && judge(left.rightChild, right.leftChild);
     }
 }
+
+//迭代解法
+public boolean isSymmetric(TreeNode root) {
+    Queue<TreeNode> q = new LinkedList<>();
+    q.add(root);
+    q.add(root);
+    while (!q.isEmpty()) {
+        TreeNode t1 = q.poll();
+        TreeNode t2 = q.poll();
+        if (t1 == null && t2 == null) continue;
+        if (t1 == null || t2 == null) return false;
+        if (t1.val != t2.val) return false;
+        //注意节点的加入顺序
+        q.add(t1.left);
+        q.add(t2.right);
+        q.add(t1.right);
+        q.add(t2.left);
+    }
+    return true;
+}
 ```
 
 
@@ -2377,48 +2576,27 @@ class Solution {
 #### 【9】判断二叉搜索树的后序遍历
 
 ```java
-public class Main {
-
-    public static void main(String[] args) {
-
-        int squence[] = {5, 7, 6, 9, 11, 10, 8};
-        System.out.println(verifySquenceOfBTS(squence));
+public class Solution {
+    public boolean VerifySquenceOfBST(int [] sequence) {
+        if(sequence.length==0)  return false;
+        if(sequence.length==1)  return true;
+        return judge(sequence, 0, sequence.length-1);
     }
-    
-    public static boolean verifySquenceOfBTS(int[] squence) {
-        if (squence == null || squence.length <= 0) {
-            return false;
+ 
+    private boolean judge(int[] sequence, int star, int end) {
+        if(star>end) {
+            return true;
         }
-        int root = squence[squence.length - 1];
-        //找到分界线
-        int i = 0;
-        for (; i < squence.length - 1; i++) {
-            //这里注意，传进来的数组只有一个元素的时候会造成虚拟机栈溢出。
-            if (squence[i] >= root) {
-                break;
-            }
+        int i=star;
+        while(sequence[i]<sequence[end]) {
+            i++;
         }
-
-        //验证右子树是否都大于根节点
-        int j = i;
-        for (; j < squence.length - 1; j++) {
-            if (squence[j] < root) {
+        for(int j=i;j<end;j++) {
+            if(sequence[j]<sequence[end]) {
                 return false;
             }
         }
-
-        boolean left = true;
-
-        if (i > 0) {
-            left = verifySquenceOfBTS(Arrays.copyOf(squence, i));
-        }
-
-        boolean right = true;
-        if (i < squence.length - 1) {
-            right = verifySquenceOfBTS(Arrays.copyOfRange(squence, i, squence.length - 1));
-        }
-
-        return (left && right);
+        return judge(sequence,star,i-1)&&judge(sequence,i,end-1);//递归判断左子树与右子树
     }
 }
 ```
@@ -2495,7 +2673,7 @@ class Solution {
         //对遍历代码稍做修改
         int nLeft = treeDepth(root.leftChild);
         int nRight = treeDepth(root.rightChild);
-        return (nLeft > nRight) ? (nLeft + 1) : (nRight + 1);
+        return Math.max(nLeft,nRight)+1;
     }
 }
 ```
@@ -2514,10 +2692,12 @@ public class Solution {
     }
     private int getDepth(TreeNode root) {
         if (root == null) return 0;
+        
         int left = getDepth(root.left);
         if (left == -1) return -1;
         int right = getDepth(root.right);
         if (right == -1) return -1;
+        
         return Math.abs(left - right) > 1 ? -1 : 1 + Math.max(left, right);
     }
 }
@@ -2536,15 +2716,16 @@ class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
         //根是否已经递归到空
         if (root ==null){
-            return root;
+            return null;
         }
-        //是否根与p或q相等了
+        //是否根与p或q相等了，则说明此时root是二者的最近公共祖先
         if (root.val==p.val ||root.val==q.val){//if (root == p || root == q) {
             return root;
         }
         //left和right的意义是
         TreeNode left = lowestCommonAncestor(root.left, p, q);
         TreeNode right = lowestCommonAncestor(root.right, p, q);
+        //都不为null说明是root
         if (left != null && right != null) {
             return root;
         } else if (left != null) {
@@ -2577,6 +2758,7 @@ class Solution {
         if(p.val<root.val && q.val<root.val){
             return lowestCommonAncestor(root.left,p,q);
         }
+        //注意返回值是root
         return root;
     }
 }
@@ -2591,10 +2773,10 @@ class Solution {
 > 例如，给定二叉树
 >
 > ```java
->     1
->    / \
->   2   5
->  / \   \
+>       1
+>      / \
+>     2   5
+>   / \   \
 > 3   4   6
 > ```
 >
@@ -2603,15 +2785,15 @@ class Solution {
 > ```java
 > 1
 >  \
->   2
->    \
->     3
+>    2
 >      \
->       4
+>       3
 >        \
->         5
+>         4
 >          \
->           6
+>           5
+>            \
+>             6
 > ```
 
 ```java
@@ -2621,6 +2803,7 @@ class Solution {
             return ;
         }
         
+        //递归修改左右子树
         flatten(root.left);
         flatten(root.right);
         
@@ -2683,6 +2866,86 @@ class Solution {
         return res;
     }
 }
+```
+
+
+
+#### 【17】和为某一值的路径
+
+```java
+	// pathList存所有可能路径
+	// path用来保存路径的数据结构 这儿用ArrayList模拟了栈的数据结构
+	private ArrayList<ArrayList<Integer>> pathList = new ArrayList<ArrayList<Integer>>();
+	private ArrayList<Integer> path = new ArrayList<>();
+ 
+	public ArrayList<ArrayList<Integer>> findPath(TreeNode root, int sum) {
+		if (root == null)
+			return pathList;
+		path.add(root.val);
+		sum -= root.val;
+		// 路径值等于0，且当前节点是叶子节点 则找到一条路径
+		if (sum == 0 && root.left == null && root.right == null)
+			// 每次找到路径都需要添加一个新的path 不可以直接加path成员变量 这是个引用，不然所有pathList的值都指向同一个path
+			pathList.add(new ArrayList<Integer>(path));
+		if (root.left != null)
+			findPath(root.left, sum);
+ 
+		if (root.right != null)
+			findPath(root.right, sum);
+		// 访问完当前节点 需要删除路径中最后一个节点，回退至父节点
+		path.remove(path.size() - 1);
+		return pathList;
+	}
+```
+
+
+
+#### 【18】之字形打印二叉树
+
+> 利用两个栈，注意进栈顺序，s1先左后右，s2先右后左
+
+```java
+public static ArrayList<ArrayList<Integer>> printTree(TreeNode root) {
+        if (root == null) {
+            return null;
+        }
+        ArrayList<ArrayList<Integer>> result = new ArrayList<>();
+        //存储奇层节点
+        Stack<TreeNode> stackOne = new Stack<>();
+        //存储偶层节点
+        Stack<TreeNode> stackTwo = new Stack<>();
+        stackOne.push(root);
+        int level = 1;
+        while (!stackOne.isEmpty() || !stackTwo.empty()) {
+            ArrayList<Integer> temp = new ArrayList<>();
+            if (level % 2 == 1) {
+                while (!stackOne.isEmpty()) {
+                    TreeNode current = stackOne.pop();
+                    if (current != null) {
+                        temp.add(current.val);
+                        //注意先左后右
+                        stackTwo.push(current.left);
+                        stackTwo.push(current.right);
+                    }
+                }
+            } else {
+                while (!stackTwo.empty()) {
+                    TreeNode current = stackTwo.pop();
+                    if (current != null) {
+                        temp.add(current.val);
+                        stackOne.push(current.right);
+                        stackOne.push(current.left);
+                    }
+                }
+            }
+            if (!temp.isEmpty()) {
+                result.add(temp);
+                level++;
+            }
+        }
+
+        return result;
+    }
 ```
 
 
@@ -2935,7 +3198,33 @@ class Solution {
 
 
 
+#### 【5】二进制表示中1的个数
 
+> 输入一个整数，输出该数二进制表示中1的个数。其中负数用补码表示。
+
+```java
+ public int NumberOf1(int n) {
+        int count = 0;
+        int flag = 1;
+        while(flag != 0){
+            if((n & flag) != 0){
+                count ++;
+            }
+            flag = flag << 1;
+        }
+        return count;
+    }
+//解法2
+每次减少传进来的数对应的二进制的一个1： 如果一个整数不为0，那么这个整数至少有一位是1。如果我们把这个整数减1，那么原来处在整数最右边的1就会变为0，原来在1后面的所有的0都会变成1(如果最右边的1后面还有0的话)。其余所有位将不会受到影响。 举个例子：一个二进制数1100，从右边数起第三位是处于最右边的一个1。减去1后，第三位变成0，它后面的两位0变成了1， 而前面的1保持不变，因此得到的结果是1011.我们发现减1的结果是把最右边的一个1开始的所有位都取反了。这个时候如果我们再把原来的整数和减去1之后的结果做与运算，从原来整数最右边一个1那一位开始所有位都会变成0。如1100&1011=1000.也就是说，把一个整数减去1，再和原整数做与运算，会把该整数最右边一个1变成0.那么一个整数的二进制有多少个1，就可以进行多少次这样的操作
+ public int NumberOf1(int n) {
+        int count = 0;
+        while(n != 0){
+            count ++;
+            n = n & (n-1);
+        }
+        return count;
+    }
+```
 
 
 
