--- a/读书笔记/《开发艺术探索》.md
+++ b/读书笔记/《开发艺术探索》.md
@@ -1,6 +1,6 @@
 [TOC]
 
-
+# 《开发艺术探索》
 
 ## 一、Activity生命周期和启动模式
 
@@ -39,7 +39,7 @@
 
 - Bundle 实现了 Parcelable 接口，所以它可以很方便的在不同的进程间传输。当然，我们传输的数据必须能够被序列化，比如基本类型、实现了 Parcelable 接口的对象、实现了 Serialization 接口的对象以及一些 Android 支持的特殊对象。
 
-- 对于 SharedPreferences，系统对它的读/写都有一定的缓存策略，即在内存中会有一份 SharedPreferences 文件的缓存，因此在多进程模式下，系统对它的读/写就变得不可靠，当面对高并发的读/写访问，SharedPreferences 有很大几率会丢失数据，因此，不建议在进程通信中使用 SharedPreferences。
+- 对于 SharedPreferences，底层实现是xml存储键值对形式，系统对它的读/写都有一定的缓存策略，即在内存中会有一份 SharedPreferences 文件的缓存，因此在多进程模式下，系统对它的读/写就变得不可靠，当面对高并发的读/写访问，SharedPreferences 有很大几率会丢失数据，因此，不建议在进程通信中使用 SharedPreferences。
 
 - Messenger 可以在不同进程中传递 Message 对象，是一种轻量级的 IPC 方案，底层实现是 AIDL。只能传递消息，不能跨进程调用服务端的方法。同时，由于它一次只处理一个请求，串行执行，因此在服务端不用考虑线程同步的问题。
 
@@ -339,6 +339,16 @@ Android提供了四种(5、6种另算)常用的操作多线程的方式，分别
 
 - 在 JVM 中是使用监视器锁来实现不同线程的异步执行，在语法的表现就是synchronized
 
+----
+
+- AsyncTask原理：内部是Handler和两个线程池实现的，Handler用于将线程切换到主线程，两个线程池一个用于任务的排队，一个用于执行任务，当AsyncTask执行execute方法时会封装出一个FutureTask对象，将这个对象加入队列中，如果此时没有正在执行的任务，就执行它，执行完成之后继续执行队列中下一个任务，执行完成通过Handler将事件发送到主线程。AsyncTask必须在主线程初始化，因为内部的Handler是一个静态对象，在AsyncTask类加载的时候他就已经被初始化了。在Android3.0开始，execute方法串行执行任务的，一个一个来，3.0之前是并行执行的。如果要在3.0上执行并行任务，可以调用executeOnExecutor方法
+
+- HandlerThread原理：继承自 Thread，start开启线程后，会在其run方法中会通过Looper 创建消息队列并开启消息循环，这个消息队列运行在子线程中，所以可以将HandlerThread 中的 Looper 实例传递给一个 Handler，从而保证这个 Handler 的 handleMessage 方法运行在子线程中，Android 中使用 HandlerThread的一个场景就是 IntentService
+
+- IntentService原理：继承自Service，它的内部封装了 HandlerThread 和Handler，可以执行耗时任务，同时因为它是一个服务，优先级比普通线程高很多，所以更适合执行一些高优先级的后台任务，HandlerThread底层通过Looper消息队列实现的，所以它是顺序的执行每一个任务。可以通过Intent的方式开启IntentService，IntentService通过handler将每一个intent加入HandlerThread子线程中的消息队列，通过looper按顺序一个个的取出并执行，执行完成后自动结束自己，不需要开发者手动关闭
+
+--------
+
 
 
 ## 十二、Bitmap与LruCache
@@ -350,3 +360,8 @@ Android提供了四种(5、6种另算)常用的操作多线程的方式，分别
   - 内存缓存
   - 磁盘缓存
   - 网络拉取
+
+- LruCache 中 Lru 算法的实现就是通过 LinkedHashMap 来实现的。LinkedHashMap 继承于 HashMap，它使用了一个双向链表来存储 Map中的Entry顺序关系，
+  对于get、put、remove等操作，LinkedHashMap除了要做HashMap做的事情，还做些调整Entry顺序链表的工作。
+  LruCache中将LinkedHashMap的顺序设置为LRU顺序来实现LRU缓存，每次调用get(也就是从内存缓存中取图片)，则将该对象移到链表的尾端。
+  调用put插入新的对象也是存储在链表尾端，这样当内存缓存达到设定的最大值时，将链表头部的对象（近期最少用到的）移除。
